feat: add checkbox for photo release permission

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
   <script src="index.js"></script>
   <main class="main">
     <header>
-      <h2 class="form-header shadow white-container">Welcome to Lefty Loosey Bike Collective!</h2>
+      <h2 class="form-header shadow white-container">Welcome to PVD Bike Collective!</h2>
     </header>
 
     <form class="shadow white-container" id="sign-in">
@@ -91,6 +91,18 @@
               </label>
             </li>
           </ul>
+        </fieldset>
+      </section>
+
+      <section>
+        <h3>Photo release</h3>
+        <fieldset>
+          <legend>Would you be okay with your photo being used in public media (such as Instagram)?</legend>
+          <label for="photo_release">
+            <input type="checkbox" id="photo_release" value="true" />
+            Yes, I grant permission to PVD Bike Collective (PBC) to use videos or photographs of me for educational
+            purposes or for the promotion of PBC-organized programs.
+          </label>
         </fieldset>
       </section>
 
