fix: value of 'donor' role in form

--- a/client/index.html
+++ b/client/index.html
@@ -66,7 +66,7 @@
             </li>
             <li>
               <label for="role_donate_parts">
-                <input type="checkbox" name="role" id="role_donate_parts" value="client" />
+                <input type="checkbox" name="role" id="role_donate_parts" value="donor" />
                 Donate a bike or bike parts
               </label>
             </li>
