feat: improve checkbox styling

--- a/client/index.html
+++ b/client/index.html
@@ -47,25 +47,25 @@
           </legend>
           <ul>
             <li>
-              <label for="role_volunteer">
+              <label class="checkbox" for="role_volunteer">
                 <input type="checkbox" name="role" id="role_volunteer" value="volunteer" />
                 Volunteer my time and help out
               </label>
             </li>
             <li>
-              <label for="role_get_assistance">
+              <label class="checkbox" for="role_get_assistance">
                 <input type="checkbox" name="role" id="role_get_assistance" value="client" />
                 Get assistance with repairing my bike
               </label>
             </li>
             <li>
-              <label for="role_purchase_parts">
+              <label class="checkbox" for="role_purchase_parts">
                 <input type="checkbox" name="role" id="role_purchase_parts" value="client" />
                 Buy a bike or bike parts
               </label>
             </li>
             <li>
-              <label for="role_donate_parts">
+              <label class="checkbox" for="role_donate_parts">
                 <input type="checkbox" name="role" id="role_donate_parts" value="donor" />
                 Donate a bike or bike parts
               </label>
@@ -79,13 +79,13 @@
         <fieldset>
           <ul>
             <li>
-              <label for="interest_sustainability">
+              <label class="checkbox" for="interest_sustainability">
                 <input type="checkbox" name="interests" id="interest_sustainability" value="sustainability" />
                 Sustainability
               </label>
             </li>
             <li>
-              <label for="interest_diy">
+              <label class="checkbox" for="interest_diy">
                 <input type="checkbox" name="interests" id="interest_diy" value="diy" />
                 DIY
               </label>
@@ -98,7 +98,7 @@
         <h3>Photo release</h3>
         <fieldset>
           <legend>Would you be okay with your photo being used in public media (such as Instagram)?</legend>
-          <label for="photo_release">
+          <label class="checkbox" for="photo_release">
             <input type="checkbox" id="photo_release" value="true" />
             Yes, I grant permission to PVD Bike Collective (PBC) to use videos or photographs of me for educational
             purposes or for the promotion of PBC-organized programs.
