feat: small style improvements

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <form class="shadow white-container" id="sign-in">
-      <h2>Check in by entering your information</h2>
+      <h2 class="form-header">Check in by entering your information</h2>
 
       <section>
         <h3>Personal info</h3>
