feat: add some more interest areas

--- a/client/index.html
+++ b/client/index.html
@@ -79,6 +79,18 @@
         <fieldset>
           <ul>
             <li>
+              <label class="checkbox" for="interest_mechanics">
+                <input type="checkbox" name="interests" id="interest_mechanics" value="mechanics" />
+                Understanding mechanical systems
+              </label>
+            </li>
+            <li>
+              <label class="checkbox" for="interest_infrastructure">
+                <input type="checkbox" name="interests" id="interest_infrastructure" value="infrastructure" />
+                Transit infrastructure
+              </label>
+            </li>
+            <li>
               <label class="checkbox" for="interest_sustainability">
                 <input type="checkbox" name="interests" id="interest_sustainability" value="sustainability" />
                 Sustainability
@@ -88,6 +100,12 @@
               <label class="checkbox" for="interest_diy">
                 <input type="checkbox" name="interests" id="interest_diy" value="diy" />
                 DIY
+              </label>
+            </li>
+            <li>
+              <label class="checkbox" for="interest_equitability">
+                <input type="checkbox" name="interests" id="interest_equitability" value="equitability" />
+                Social justice and equitability
               </label>
             </li>
           </ul>
