feat: add basic layout for liability waiver

--- a/client/index.html
+++ b/client/index.html
@@ -83,6 +83,22 @@
       </section>
 
       <section>
+        <h3>Liability waiver</h3>
+        <fieldset>
+          <legend>
+            Please read and agree to the terms: <span class="required" aria-label="required">*</span>
+          </legend>
+          <label class="checkbox" for="photo_release">
+            <input type="checkbox" id="photo_release" value="true" />
+            <span style="display: inline-block;">
+              By checking this box, I certify that I have read, understand, and agree to the terms of PBC's
+              <span id="liability-terms-btn">Liability Waiver</span>.
+            </span>
+          </label>
+        </fieldset>
+      </section>
+
+      <section>
         <h3 class="check-multiple">Interest areas</h3>
         <fieldset>
           <ul>
@@ -133,7 +149,7 @@
       </section>
 
       <section class="center-horizontal">
-        <span class="required">* </span>&nbsp– required
+        <span class="required">* </span>&nbsp;– required
       </section>
 
       <section class="center-horizontal">
