--- a/client/index.html
+++ b/client/index.html
@@ -11,12 +11,16 @@
 
 <body>
   <script src="index.js"></script>
+
+  <div id="modal-overlay" class="hidden"></div>
+  <section id="modal" class="hidden"></section>
+
   <main class="main">
     <header>
       <h2 class="form-header shadow white-container">Welcome to PVD Bike Collective!</h2>
     </header>
 
-    <form class="shadow white-container" id="sign-in">
+    <form class="shadow white-container" id="sign-in" onsubmit="return false">
       <h2 class="form-header">Check in by entering your information</h2>
 
       <section>
@@ -92,7 +96,7 @@
             <input type="checkbox" id="photo_release" value="true" />
             <span style="display: inline-block;">
               By checking this box, I certify that I have read, understand, and agree to the terms of PBC's
-              <span id="liability-terms-btn">Liability Waiver</span>.
+              <button role="button" id="liability-terms-btn">Liability Waiver</button>.
             </span>
           </label>
         </fieldset>
