--- a/client/index.html
+++ b/client/index.html
@@ -92,9 +92,9 @@
           <legend>
             Please read and agree to the terms: <span class="required" aria-label="required">*</span>
           </legend>
-          <label class="checkbox" for="photo_release">
-            <input type="checkbox" id="photo_release" value="true" />
-            <span style="display: inline-block;">
+          <label class="checkbox" for="liability_waiver">
+            <input type="checkbox" id="liability_waiver" />
+            <span>
               By checking this box, I certify that I have read, understand, and agree to the terms of PBC's
               <button role="button" id="liability-terms-btn">Liability Waiver</button>.
             </span>
@@ -145,7 +145,7 @@
         <fieldset>
           <legend>Would you be okay with your photo being used in public media (such as Instagram)?</legend>
           <label class="checkbox" for="photo_release">
-            <input type="checkbox" id="photo_release" value="true" />
+            <input type="checkbox" id="photo_release" />
             Yes, I grant permission to PVD Bike Collective (PBC) to use videos or photographs of me for educational
             purposes or for the promotion of PBC-organized programs.
           </label>
