fix: change phone number input field type to 'tel'

--- a/client/index.html
+++ b/client/index.html
@@ -45,7 +45,7 @@
           <div class="label-above">
             <label for="phone-number">
               <div>Phone number: <span class="required" aria-label="required">*</span></div>
-              <input type="text" id="phone-number" name="phone-number" placeholder="(555) 555-5555" />
+              <input type="tel" id="phone-number" name="phone-number" placeholder="(555) 555-5555" />
             </label>
           </div>
         </fieldset>
