feat: tweaks to improve accessibility and SEO scores (lighthouse analytics)

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="PVD Bike Collective visitor sign-in form and liability waiver" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>PBC Attendance Info</title>
   <link rel="stylesheet" href="style.css" />
@@ -169,11 +170,11 @@
                 Donate a bike or bike parts
               </label>
             </li>
-            <label class="checkbox">
-              <div></div>
-              <p class="hidden error-message">Select at least 1 role</p>
-            </label>
           </ul>
+          <label class="checkbox">
+            <div></div>
+            <p class="hidden error-message">Select at least 1 role</p>
+          </label>
         </fieldset>
       </section>
 
