feat: add close button to modal and update stylesheet to scale based on font size

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,10 @@
   <div id="modal-overlay" class="hidden"></div>
   <section id="modal" class="hidden">
     <article id="modal-content">
-      <h3 id="modal-header">PVD Bike Collective Liability Waiver</h3>
+      <div class="modal-header">
+        <h3 class="modal-title">PVD Bike Collective Liability Waiver</h3>
+        <button type="button" id="modal-close-btn">×</button>
+      </div>
       <hr>
       <section id="liability-text">
         <p>
