--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="PVD Bike Collective visitor sign-in form and liability waiver" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>PBC Attendance Info</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -100,8 +101,6 @@
       </label>
     </article>
   </section>
-
-  </p>
 
   <main class="main">
     <header>
