--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <script src="index.js"></script>
+  <script type="module" src="index.js"></script>
 
   <div id="modal-overlay" class="hidden"></div>
   <section id="modal" class="hidden">
