--- a/client/index.html
+++ b/client/index.html
@@ -8,11 +8,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>PBC Attendance Info</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-  <script type="module" src="index.js"></script>
+  <script type="module" src="js/index.js"></script>
 
   <div id="modal-overlay" class="hidden"></div>
   <section id="modal" class="hidden">
