feat: replace phone number field with email and add checkbox for first time visitor

--- a/client/index.html
+++ b/client/index.html
@@ -132,9 +132,9 @@
             </div>
           </div>
           <div class="label-above">
-            <label for="phone-number">
-              <div>Phone number: <span class="required" aria-label="required">*</span></div>
-              <input type="tel" id="phone-number" name="phone-number" placeholder="(555) 555-5555" required />
+            <label for="email">
+              <div>Email <span class="required" aria-label="required">*</span></div>
+              <input type="email" id="email" name="email" required />
               <p class="hidden error-message">This field is required</p>
             </label>
           </div>
@@ -205,6 +205,17 @@
             <input type="checkbox" name="photo-release" id="photo-release" value="true" />
             Yes, I grant permission to PVD Bike Collective (PBC) to use videos or photographs of me for educational
             purposes or for the promotion of PBC-organized programs.
+          </label>
+        </fieldset>
+      </section>
+
+      <section>
+        <h3>First time visit</h3>
+        <fieldset>
+          <legend>Is this your first time visiting PBC?</legend>
+          <label class="checkbox" for="first-visit">
+            <input type="checkbox" name="first visit" id="first visit" value="true" />
+            Yes, it's my first time here!
           </label>
         </fieldset>
       </section>
