fix: typo in element id

--- a/client/index.html
+++ b/client/index.html
@@ -223,7 +223,7 @@
         <fieldset>
           <legend>Is this your first time visiting PBC?</legend>
           <label class="checkbox" for="first-visit">
-            <input type="checkbox" name="first visit" id="first visit" value="true" />
+            <input type="checkbox" name="first-visit" id="first-visit" value="true" />
             Yes, it's my first time here!
           </label>
         </fieldset>
