feat: change org name

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
   <section id="modal" class="hidden">
     <article id="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title">PVD Bike Collective Liability Waiver</h3>
+        <h3 class="modal-title">Left Loosey Bike Collective Liability Waiver</h3>
         <button type="button" id="modal-close-btn">×</button>
       </div>
       <hr>
@@ -104,7 +104,7 @@
 
   <main class="main">
     <header>
-      <h2 class="form-header shadow white-container">Welcome to PVD Bike Collective!</h2>
+      <h2 class="form-header shadow white-container">Welcome to Lefty Loosey Bike Collective!</h2>
     </header>
 
     <form class="shadow white-container" id="sign-in" onsubmit="return false" novalidate>
@@ -187,7 +187,8 @@
           <label class="checkbox" for="liability-waiver">
             <input type="checkbox" name="liability-waiver" id="liability-waiver" value="true" required />
             <span>
-              By checking this box, I certify that I have read, understand, and agree to the terms of PBC's
+              By checking this box, I certify that I have read, understand, and agree to the terms of Lefty Loosey Bike
+              Collective's
               <button type="button" id="liability-terms-btn">Liability Waiver</button>.
               <p class="hidden error-message">Liability waiver is required</p>
             </span>
@@ -212,8 +213,8 @@
           <legend>Would you be okay with your photo being used in public media (such as Instagram)?</legend>
           <label class="checkbox" for="photo-release">
             <input type="checkbox" name="photo-release" id="photo-release" value="true" />
-            Yes, I grant permission to PVD Bike Collective (PBC) to use videos or photographs of me for educational
-            purposes or for the promotion of PBC-organized programs.
+            Yes, I grant permission to Lefty Loosey Bike Collective to use videos or photographs of me for educational
+            purposes or for the promotion of Lefty Loosey-organized programs.
           </label>
         </fieldset>
       </section>
@@ -221,7 +222,7 @@
       <section>
         <h3 class="optional">First time visit</h3>
         <fieldset>
-          <legend>Is this your first time visiting PBC?</legend>
+          <legend>Is this your first time visiting Lefty Loosey?</legend>
           <label class="checkbox" for="first-visit">
             <input type="checkbox" name="first-visit" id="first-visit" value="true" />
             Yes, it's my first time here!
